--- a/config.cfg
+++ b/config.cfg
@@ -1,7 +1,8 @@
 [chess.com]
-username=K1utzer
-password=98L,u,t,z
-
+username=
+password=
+[stockfish]
+path_name=
 [settings]
 legit=True
-keepPlaying=True
+keepPlaying=False
