--- a/config.cfg
+++ b/config.cfg
@@ -1,8 +1,8 @@
 [chess.com]
-username=
-password=
+username=GettIt_21
+password=Hallo123
 [stockfish]
-path_name=
+path_name=stockfish_13_win_x64_bmi2/stockfish_13_win_x64_bmi2.exe
 [settings]
 legit=False
 keepPlaying=False
