--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,4 @@ stockfish_path/sf13/
 stockfish_path/DS_Store/
 board_result.jpg/
 pictures/screen.png/
-pictures/turn_screen/
+pictures/turn_screen.png/
