working but ugly code

--- a/config.cfg
+++ b/config.cfg
@@ -1,5 +1,5 @@
 [stockfish]
-path=stockfish_path/stockfish_13_win_x64_bmi2.exe
+path=stockfish_path/stockfish_14.1_win_x64_avx2.exe
 [settings]
 legit=False
 keepPlaying=False
