--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,9 @@ stockfish_path/DS_Store/
 board_result.jpg/
 pictures/screen.png/
 pictures/turn_screen.png/
-logs/
+logs/chessbot_logger.txt
 pictures/turn_screen.png
 pictures/screen.png
 pictures/board_detection.png
+pictures/check_detection.png
 __pycache__/
